--- a/Projects/Recipies/index.html
+++ b/Projects/Recipies/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./Recipes/friedChicken.html" target="_blank">Fried Chicken</a></li>
+            <li><a href="./pages/friedChicken.html" target="_blank">Fried Chicken</a></li>
         </ul>
 
     </body>
