updated_folder_structure

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
     <title>Mini Projects</title>
 </head>
 <body>
-    <h1>HTML and CSS Projects</h1>
+    <h1>Assignments</h1>
+    <h2>HTML and CSS and JS</h2>
+    <ul>
+        <li><a href="/Assignments/Css-Workshop/index.html" target="_blank">Css Workshop</a></li>
+        <li>Assignment 1</li>
+    </ul>
+    <h2>React</h2>
+    <!-- <h1>Projects</h1>
     <ol>
         <li><a href="./Projects/Recipies/index.html" target="_blank">Recipes</a></li>
-    </ol>
+    </ol> -->
     
 </body>
 </html>
