--- a/Projects/Recipies/index.html
+++ b/Projects/Recipies/index.html
@@ -5,7 +5,7 @@
         <title>Favourite Recipies</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Recipes</h1>
         <ul>
             <li><a href="./pages/friedChicken.html" target="_blank">Fried Chicken</a></li>
         </ul>
