css_workshop_assignment_solution

--- a/Assignments/Css-Workshop/index.html
+++ b/Assignments/Css-Workshop/index.html
@@ -3,15 +3,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Workshop</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <hr>
     <h2>Problem Statement</h2>
     <ol>
         <li><p>Create a box of dimension 500X500. Add border to it. Add border-radius to make it circular. 
             Add child box of dimension 50X50. Add animation to child box in a such way that it should rotate 
             from start of parent-box left top and rotate in the direction of parent border in clockwise direction
-             and reach till end of parent border and again rotate that in reverse direction.</p></li>
-        <li><p>Create Raweng site homepage using reference of raweng site home page (<a href="https://www.raweng.com/" target="_blank">RawEngineering Website</a>)</p></li>
+             and reach till end of parent border and again rotate that in reverse direction.<b>(Batch A)</b></p></li>
+        <li><p>Create Raweng site homepage using reference of raweng site home page (<a href="https://www.raweng.com/" target="_blank">RawEngineering Website</a>)<b>(Batch B)</b></p></li>
     </ol>
     
     <h3>Must Have Things</h3>
@@ -32,5 +34,12 @@
         <li>Use of scss(for animation task)</li>
         <li>Use of CSS framework like bootstrap, Material UI, Tailwind CSS</li>
     </ul>
+    <hr>
+    <h2>Solution 1 (v1.0)</h2>
+    <div class="parent-circle">
+        <div class="child-box">
+        </div>
+    </div>
+    <hr>
 </body>
 </html>
