--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>HTML and CSS and JS</h2>
     <ul>
         <li><a href="/Assignments/Css-Workshop/index.html" target="_blank">Css Workshop</a></li>
-        <li>Assignment 1</li>
+        <li><a href="/Assignments/Assignment-1/" target="_blank">Assignment 1 (Dice Game)</a></li>
     </ul>
     <h2>React</h2>
     <!-- <h1>Projects</h1>
