--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li><a href="/Assignments/Assignment-2/API_Calls/index.html" target="_blank">Assignment 2 (API Calls)</a></li>
     </ul>
     <h2>React</h2>
+    <ul>
+        <li><a href="/Assignments/Assignment-3/index.html" target="_blank">Assignment 3 (Props)</a></li>
+    </ul>
     <!-- <h1>Projects</h1>
     <ol>
         <li><a href="./Projects/Recipies/index.html" target="_blank">Recipes</a></li>
