added basic todo

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
     <ul>
         <li><a href="/Assignments/Assignment-3/index.html" target="_blank">Assignment 3 (Props)</a></li>
     </ul>
-    <!-- <h1>Projects</h1>
+    <h1>Projects</h1>
     <ol>
-        <li><a href="./Projects/Recipies/index.html" target="_blank">Recipes</a></li>
-    </ol> -->
+        <li><a href="./Projects/Bikes-Website/index.html" target="_blank">Bike Website (HTML&CSS)</a></li>
+        <li><a href="./Projects/simple-popup/index.html" target="_blank">Simple Popup (JS)</a></li>
+        <li><a href="./Projects/basic-todo/index.html" target="_blank">Basic Todo (JS)</a></li>
+
+    </ol>
     
 </body>
 </html>
