--- a/Projects/basic-todo/index.html
+++ b/Projects/basic-todo/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>event deligation</title>
+    <title>Basic Todo</title>
     <style>
         li{
             list-style-type: none;
