--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="./Projects/Bikes-Website/index.html" target="_blank">Bike Website (HTML&CSS)</a></li>
         <li><a href="./Projects/simple-popup/index.html" target="_blank">Simple Popup (JS)</a></li>
         <li><a href="./Projects/basic-todo/index.html" target="_blank">Basic Todo (JS)</a></li>
+        <li><a href="./Projects/interactive-quiz/index.html" target="_blank">Interactive Quiz (JS)</a></li>
 
     </ol>
     
