--- a/Projects/weather-app/index.html
+++ b/Projects/weather-app/index.html
@@ -12,14 +12,15 @@
         <h1 class="text-muted text-center my-4">Weather Search</h1>
         <form class="change-location my-4 text-center text-muted">
             <label for="city">Enter a Location</label>
-            <input type="text" name="city" class="form-control p-2">
+            <input type="text" name="city" class="form-control p-2 my-3">
         </form>
 
-        <div class="card shadow-lg rounded">
+        <div class="card shadow-lg rounded d-none">
             <!-- we will use placeholder image for now -->
              <img src="https://via.placeholder.com/400x300" class="time card-img-top">
              <div class="icon bg-light mx-auto text-center">
                 <!-- icon -->
+                 <img src="" alt="">
              </div>
              <div class="text-muted text-uppercase text-center details">
                 <h5 class="my-3">City Name</h5>
