added digital clock

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     </ul>
     <h1>Projects</h1>
     <ol>
-        <li><a href="./Projects/Bikes-Website/index.html" target="_blank">Bike Website (HTML&CSS)</a></li>
-        <li><a href="./Projects/simple-popup/index.html" target="_blank">Simple Popup (JS)</a></li>
-        <li><a href="./Projects/basic-todo/index.html" target="_blank">Basic Todo (JS)</a></li>
-        <li><a href="./Projects/interactive-quiz/index.html" target="_blank">Interactive Quiz (JS)</a></li>
+        <li><a href="./Projects/0.bikes-website/index.html" target="_blank">Bike Website (HTML&CSS)</a></li>
+        <li><a href="./Projects/1.simple-popup/index.html" target="_blank">Simple Popup (JS)</a></li>
+        <li><a href="./Projects/2.basic-todo/index.html" target="_blank">Basic Todo (JS)</a></li>
+        <li><a href="./Projects/3.digital-clock/index.html" target="_blank">Digital Clock (JS)</a></li>
+        <li><a href="./Projects/4.interactive-quiz/" target="_blank">Interactive Quiz (JS)</a></li>
+        <li><a href="./Projects/5.weather-app/" target="_blank">Weather App(JS)</a></li>
 
     </ol>
     
