tailwind-recipes-page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <li><a href="./Projects/3.digital-clock/index.html" target="_blank">Digital Clock (JS)</a></li>
         <li><a href="./Projects/4.interactive-quiz/" target="_blank">Interactive Quiz (JS)</a></li>
         <li><a href="./Projects/5.weather-app/" target="_blank">Weather App(JS)</a></li>
-        <li><a href="http://localhost:5173/ß" target="_blank">Weather App(Vite + React)</a></li>
+        <li><a href="http://localhost:5173/" target="_blank">Weather App(Vite + React)</a></li>
+        <li><a href="" target="_blank">Recipie(Tailwind)</a></li>
 
     </ol>
     
