--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="./Projects/4.interactive-quiz/" target="_blank">Interactive Quiz (JS)</a></li>
         <li><a href="./Projects/5.weather-app/" target="_blank">Weather App(JS)</a></li>
         <li><a href="http://localhost:5173/" target="_blank">Weather App(Vite + React)</a></li>
-        <li><a href="" target="_blank">Recipie(Tailwind)</a></li>
+        <li><a href="./Projects/7.recipie-page/src/index.html" target="_blank">Recipie(Tailwind)</a></li>
 
     </ol>
     
